--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "@types/node": "^16.18.121",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "classnames": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.81.0",
+    "tailwindcss": "^3.4.15",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
