--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@lumaai/luma-web": "^0.2.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +19,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.81.0",
     "tailwindcss": "^3.4.15",
+    "three": "^0.171.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
