--- a/BE/data/projects.json
+++ b/BE/data/projects.json
@@ -1,1 +1,10 @@
-[]
+[
+    {
+        "id": "0efa8110-4b38-4911-b6a8-facc9c06d557",
+        "name": "TEST",
+        "createdBy": "Jeongyeob Shin",
+        "date": "2024-12-04T01:52:02.830Z",
+        "image": "https://placebeard.it/250/250",
+        "source": "https://lumalabs.ai/capture/ca9ea966-ca24-4ec1-ab0f-af665cb546ff"
+    }
+]
