--- a/BE/data/projects.json
+++ b/BE/data/projects.json
@@ -1,9 +1,9 @@
 [
     {
-        "id": "0efa8110-4b38-4911-b6a8-facc9c06d557",
+        "id": "0077a64d-e230-4986-8567-0378f8cdd02f",
         "name": "TEST",
         "createdBy": "Jeongyeob Shin",
-        "date": "2024-12-04T01:52:02.830Z",
+        "date": "2024-12-04",
         "image": "https://placebeard.it/250/250",
         "source": "https://lumalabs.ai/capture/ca9ea966-ca24-4ec1-ab0f-af665cb546ff"
     }
