--- a/FE/package.json
+++ b/FE/package.json
@@ -1,27 +1,19 @@
 {
-  "name": "my-app",
+  "name": "app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@lumaai/luma-web": "^0.2.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.121",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "axios": "^1.7.8",
-    "classnames": "^2.5.1",
+    "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
-    "react-router-dom": "^6.28.0",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
-    "sass": "^1.81.0",
-    "tailwindcss": "^3.4.15",
-    "three": "^0.157.0",
-    "typescript": "^4.9.5",
+    "sass": "^1.82.0",
+    "three": "^0.171.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
